[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kano-cv"
version = "1.5.1"
description = "Helpful functions for Computer Vision tasks"
readme = "README.md"
authors = [{ name = "egliette", email = "leminhtu74@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["computer vision"]
dependencies = [
    "tqdm>=4.8",
    "numpy>=1.23",
    "pytube>=15.0",
    "opencv-python>=4.9",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Github = "https://github.com/egliette/kano"